package com.marslps.AISafeFMS.model.enums;

public enum FlightStatus {
    SCHEDULED,
    OCCURING,
    DELAYED,
    COMPLETED,
    CANCELED;
}
